--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,49 +1,20 @@
 version: 2.1
 
-jobs:
-  validate_and_build:
-    docker:
-      - image: circleci/node:lts
-    resource_class: large
-    parallelism: 10
+orbs:
+  node: circleci/node@7.2.0
 
+jobs:
+  code-quality:
+    docker:
+      - image: cimg/base:stable
     steps:
-      - checkout
-      - restore_cache:
-          name: Restore pnpm Package Cache
-          keys:
-            - pnpm-packages-{{ checksum "pnpm-lock.yaml" }}
-      - run:
-          name: Install pnpm package manager
-          command: |
-            npm install --global corepack@latest
-            corepack enable
-            corepack prepare pnpm@latest-10 --activate
-            pnpm config set store-dir .pnpm-store
-      - run:
-          name: Install Dependencies
-          command: |
-            pnpm install
-      - save_cache:
-          name: Save pnpm Package Cache
-          key: pnpm-packages-{{ checksum "pnpm-lock.yaml" }}
-          paths:
-            - .pnpm-store
-      - run:
-          name: Linting
-          command: pnpm lint
-      - run:
-          name: Format
-          command: pnpm format
-      - run:
-          name: Type Checking
-          command: pnpm typecheck
-      - run:
-          name: Run Tests
-          command: pnpm test
-      - run:
-          name: Build Project
-          command: pnpm build
-      - store_artifacts:
-          name: Store Test Reports
-          path: test-results
+      - node/install:
+        pnpm-version: '10.18.2'
+        install-pnpm: true
+        node-version: lts
+        use-nvm-cache: true
+
+workflows:
+  code-quality:
+    jobs:
+      - code-quality
