--- a/package.json
+++ b/package.json
@@ -1,8 +1,31 @@
 {
   "name": "vitest-temporary-fixture",
   "version": "1.0.0",
-  "private": true,
+  "description": "Create temporary directories and fixtures on the fly for Vitest tests.",
+  "keywords": [
+    "vitest",
+    "testing",
+    "fixtures",
+    "temporary",
+    "temp",
+    "test-helpers",
+    "test-utils",
+    "directory",
+    "filesystem",
+    "mock-filesystem",
+    "test-fixtures",
+    "cleanup"
+  ],
+  "homepage": "https://github.com/JohnMostlyR/vitest-temporary-fixture",
+  "bugs": {
+    "url": "https://github.com/JohnMostlyR/vitest-temporary-fixture/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JohnMostlyR/vitest-temporary-fixture.git"
+  },
   "license": "MIT",
+  "author": "Johan Meester",
   "type": "module",
   "exports": {
     ".": {
