Add peerDependencies for vitest and improve cleanup hook error handling in temporary fixture classes

--- a/package.json
+++ b/package.json
@@ -70,5 +70,8 @@
     "unbuild": "3.6.1",
     "unique-string": "3.0.0",
     "vitest": "3.2.4"
+  },
+  "peerDependencies": {
+    "vitest": ">=3.0.0"
   }
 }
